# ShadowMask

./: .gitignore  AppImageBuilder.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  buildozer.spec  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: appimage.yml  build.yml  ci.yml  python-publish.yml  release-linux.yml  release-macos.yml  release-pypi.yml  release-windows.yml  release.yml  test.yml
appimage/: AppImageBuilder.yml
example/: example.py
scripts/: create-dmg.sh
src/: adversarial_pattern.py  alpha_attack.py
src/shadowmask/: __init__.py  attacks.py  banner.py  cli.py  core.py  gui.py  utils.py
tests/: test_core.py
web/: script.js  styles.css
