[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ShadowMask"
version = "1.0.0"
description = "A privacy tool to protect images from AI facial recognition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "John Varghese", email = "cybertrinity01@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "PyQt5>=5.15.0",
    "Pillow>=9.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/John-Varghese-EH/ShadowMask"
Documentation = "https://github.com/John-Varghese-EH/ShadowMask#readme"
Repository = "https://github.com/John-Varghese-EH/ShadowMask.git"
Issues = "https://github.com/John-Varghese-EH/ShadowMask/issues"

[project.scripts]
shadowmask = "shadowmask.cli:main"
shadowmask-gui = "shadowmask.gui:run"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=shadowmask"
