[metadata]
name = ShadowMask
version = 1.0.0
author = John Varghese
description = Privacy tool to cloak images from AI recognition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/John-Varghese-EH/ShadowMask
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    PyQt5>=5.15
    Pillow
    torch
    torchvision
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    shadowmask-cli = shadowmask.cli:main
    shadowmask-gui = shadowmask.gui:main
